--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/react-fontawesome": "0.0.20",
     "ajv": "^6.5.1",
-    "axios": "^0.18.0",
+    "bootpag": "^1.0.7",
     "bootstrap": "^4.1.1",
+    "change-case": "^3.0.2",
     "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
+    "paginationjs": "^2.1.3",
     "popper.js": "^1.14.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-notifications": "^1.4.3",
-    "react-notify-toast": "^0.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
@@ -24,28 +23,31 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "react-scripts test --env=jsdom",
+    "coverage": "react-scripts test --env=jsdom --coverage",
+    "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^5.0.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "jest": "^23.1.0",
+    "jest": "^23.2.0",
+    "prettier": "^1.13.7",
+    "react-test-renderer": "^16.4.1",
     "redux-mock-store": "^1.5.3"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "<rootDir>__tests__/setup/setupEnzyme.js",
-    "testPathIgnorePatterns": [
-      "<rootDir>/__tests__/setup/"
-    ],
-    "jest": "^23.1.0"
-  }
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
+  },
+  "proxy": "http://127.0.0.1:5000"
 }
