--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.1.1",
     "change-case": "^3.0.2",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
     "paginationjs": "^2.1.3",
     "popper.js": "^1.14.3",
@@ -43,6 +44,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "fetch-mock": "^6.5.0",
     "jest": "^23.2.0",
+    "mock-local-storage": "^1.0.5",
     "prettier": "^1.13.7",
     "react-test-renderer": "^16.4.1",
     "redux-mock-store": "^1.5.3"
