chore(create-dumb-components): Create dumb components
This commit creates dumb components to be re-used

--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
       "enzyme-to-json/serializer"
     ]
   },
-  "proxy": "http://127.0.0.1:5000"
+  "proxy": "https://weconnect-flask-api.herokuapp.com"
 }
