chore(change-proxy-settings): Change from Proxy
This commit removes the proxy settings that were affecting the app
behaviour on heroku

--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
       "enzyme-to-json/serializer"
     ]
   },
-  "proxy": "https://weconnect-flask-api.herokuapp.com"
+  "proxy" : "http://localhost:5000"
 }
